# Just-watch

./: .dockerignore  .env.example  .gitignore  README.md  m.json  main.py  orm.py  pyproject.toml  pytest.ini  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 327c812fff15_add_gernid_to_movie_table.py  57ba3175e6e7_movie_search_table.py  62168199f275_changed_password_from_string_to_bytes.py  887a1a7ac529_movie_search_table.py  8ae34ddbbae7_added_default_value_to_created_at_and_.py  8ae58c754bc1_add_genre_id_to_movie_table.py  8f4bd7bb4376_message_model.py  9bbb5f5ed7f9_added_default_value_to_created_at_and_.py  c0e66d05d03f_watchlist.py  de054dd7690a_rating.py  fd11b5dd6dff_create_users.py
src/: __init__.py  conftest.py  exception_handler.py  main.py  manage.py
src/apps/movies/exceptions/: __init__.py  exceptions.py
src/apps/movies/models/: movie_model.py
src/apps/movies/schemas/: movie_schema.py
src/apps/movies/services/: crud.py  movies.py  ratings.py  recommedation_service.py  tmdb.py  utils.py  watchlist.py
src/apps/users/: __init__.py  helpers.py
src/apps/users/exceptions/: __init__.py  exception_handler.py
src/apps/users/models/: auth_models.py  message_model.py
src/apps/users/schemas/: __init__.py  auth_schemas.py  auth_validator.py  message_schemas.py
src/apps/users/services/: __init__.py  auth_service.py  chat_box_services.py  crud.py  helpers.py  jwt_services.py  security.py  user_services.py
src/config/database/: __init__.py  setup.py
src/config/settings/: __init__.py  base.py  dev.py  prod.py
(+11 files in other folders)
