[project]
name = "just-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.131.0",
    "passguard[pydantic]>=0.1.0",
    "psycopg-binary>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
